--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Apna CarMart</title>
+        <title>CarMart</title>
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
             rel="stylesheet"
@@ -12,62 +12,85 @@
             crossorigin="anonymous"
         />
     </head>
-    <body style="background: skyblue">
-        <nav class="navbar bg-dark">
+    <body>
+        <nav class="navbar navbar-expand-lg" style="background-color: #e3f2fd">
             <div class="container-fluid">
-                <a class="navbar-brand text-white" href="{% url 'homepage' %}"
-                    >CarMart</a
+                <a class="navbar-brand" href="{% url 'homepage' %}">CarMart</a>
+                <button
+                    class="navbar-toggler"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent"
+                    aria-controls="navbarSupportedContent"
+                    aria-expanded="false"
+                    aria-label="Toggle navigation"
                 >
-                <a class="navbar-brand text-white" href="{% url 'homepage' %}"
-                    >Home</a
-                >
-                <a
-                    class="navbar-brand text-white"
-                    href="{% url 'addcarbrandpage' %}"
-                    >Add Brand</a
-                >
-                <a class="navbar-brand text-white" href="{% url 'addcarpage' %}"
-                    >Add Car</a
-                >
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
-                <div class="d-flex gap-2" role="search">
-                    {% if user.is_authenticated %}
-                    <button class="btn btn-primary text-white" type="submit">
+                <div
+                    class="collapse navbar-collapse"
+                    id="navbarSupportedContent"
+                >
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a
+                                class="nav-link"
+                                aria-current="page"
+                                href="{% url 'homepage' %}"
+                                >Home</a
+                            >
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'addcarpage' %}"
+                                >Add Car</a
+                            >
+                        </li>
+                        <li class="nav-item">
+                            <a
+                                class="nav-link"
+                                href="{% url 'addcarbrandpage' %}"
+                                >Add Brand</a
+                            >
+                        </li>
+                        {% if user.is_authenticated %}
+                        <li class="nav-item">
+                            <a
+                                class="nav-link"
+                                href="{% url 'profile' user.id %}"
+                                >Profile</a
+                            >
+                        </li>
+                        {% endif %}
+                    </ul>
+                    <div class="d-flex gap-3 align-items-center">
+                        {% if user.is_authenticated %}
                         <a
-                            class="text-decoration-none text-white"
-                            href="{% url 'profile' user.id %}"
-                            >Profile</a
-                        >
-                    </button>
-                    <button class="btn btn-danger text-white" type="submit">
-                        <a
-                            class="text-decoration-none text-white"
+                            class="btn btn-outline-primary"
                             href="{% url 'logoutpage' %}"
                             >Logout</a
                         >
-                    </button>
 
-                    {% else %}
-                    <button class="btn btn-primary" type="submit">
+                        {% else %}
+
                         <a
-                            class="text-decoration-none text-white"
-                            href="{% url 'signuppage' %}"
-                            >Sign Up</a
-                        >
-                    </button>
-                    <button
-                        class="btn btn-outline-success text-white"
-                        type="submit"
-                    >
-                        <a
-                            class="text-decoration-none text-white"
+                            class="btn btn-outline-primary mx-2"
                             href="{% url 'loginpage' %}"
                             >Login</a
                         >
-                    </button>
 
-                    {% endif %}
+                        <a
+                            class="btn btn-outline-primary"
+                            href="{% url 'signuppage' %}"
+                            >Sign Up</a
+                        >
+
+                        {% endif %}
+                    </div>
                 </div>
+
+
             </div>
         </nav>
 
