--- a/templates/login.html
+++ b/templates/login.html
@@ -11,7 +11,9 @@
         {% for fm in form%} {{fm.label_tag}} {{fm}} {{fm.errors|striptags}} 
         {% endfor %}
         <br>
-        <button class="btn btn-warning mb-4">Login</button>
+        <div class='d-flex gap-3 align-items-center'>
+            <button class="btn btn-warning mb-4">Login</button> <p class="">Don't have an account? <a href="{% url 'signuppage' %}">Sign Up</a></p>
+        </div>
     </form>
 </div>
 
