--- a/car/templates/car_detail.html
+++ b/car/templates/car_detail.html
@@ -29,7 +29,7 @@
       <div class="card-body border m-3">
         <b>{{comment.name}}</b>
         <small>, {{comment.created_on}}</small> 
-        <p>....{{comment.body}}</p>
+        <p>{{comment.body}}</p>
       </div>
     {% endfor %}
   </div>
