--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
   >
       <div class="col-6">
           <h1 class="h2 text-center mb-4">Welcome To Car Mart</h1>
-          <div class="w-75%">
+          <div class="w-75% px-2">
               <p>
                   Welcome to Car Mart, your ultimate destination for all
                   things automotive! Our website is designed with you in mind,
