--- a/car/templates/pass_change.html
+++ b/car/templates/pass_change.html
@@ -3,10 +3,10 @@
 {% block content %}
 <div>
     <form method="post" action="" style="margin:auto; width:50%; margin-top:40px">
-        <h3>{{type}} : </h3>
+    <h3 class="d-flex justify-content-center mt-5">{{type}} </h3>
         {% csrf_token %}
         {{form | crispy}}
-        <button class="btn btn-warning mb-6">Change Password</button>
+        <button class="btn btn-primary">Change Password</button>
     </form>
 </div>
 {% endblock content %}
