--- a/car/templates/update_profile.html
+++ b/car/templates/update_profile.html
@@ -7,7 +7,7 @@
         <h3 class="d-flex justify-content-center mt-5">{{type}} Page</h3>
         {% csrf_token %}
         {{form | crispy}}
-        <button class="btn btn-warning mb-6">Update Profile</button>
+        <button class="btn btn-primary">Update Profile</button>
         <a class="btn btn-primary mb-6" href="{% url 'passchange1' %}">Update Password</a>
     </form>
 </div>
