--- a/car_brand/templates/addcarbrand.html
+++ b/car_brand/templates/addcarbrand.html
@@ -7,13 +7,13 @@
     
 <div style="width:50%; margin:auto;">
     <form method="post" novalidate>
-        <h1>Add Car brand</h1>
+        <h1 class="d-flex justify-content-center mt-5">Add Car brand</h1>
         {% csrf_token %}
         <!-- {{form | crispy }} -->
         {% for fm in form%} {{fm.label_tag}} {{fm}} {{fm.errors|striptags}} 
         {% endfor %}
         <br>
-        <button class="btn btn-warning mb-5">Add Car Brand</button>
+        <button class="btn btn-outline-primary mb-5">Add Car Brand</button>
     </form>
 </div>
 
